@@ -5,6 +5,7 @@ Since 1.1.2
   - Parsing of white-space characters corrected.
   - Long options for specifying SOM dimensions.
   - MPI libraries are no longer mandatory.
+  - Fine-grained control of which interim files to save across epochs
   
 Version 1.1.2: 2013-11-28
 
